Fix overflow for links and remove website/phone from popups when the service doesn't contain that data

--- a/src/css/finder.less
+++ b/src/css/finder.less
@@ -160,6 +160,10 @@ html {
   border: 1px solid #C1C1C1;
   .border-radius(10px);
   z-index: 0;
+
+  .leaflet-popup-content {
+    overflow: hidden;
+  }
 }
 
 .glyphicon-ok {
@@ -332,6 +336,7 @@ html {
     a,
     p {
       display: block;
+      overflow: hidden;
     }
 
     p {
